--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="recipes/fried-chicken.html">Fried Chicken</a></li>
         <li><a href="recipes/fried-pork.html">Fried Pork</a></li>
-        <li><a href="recipes/wors-recipe.html">Wors Recipe</a></li>
+        <li><a href="recipes/beef.html">Beef Recipe</a></li>
     </ul>
     
 </body>
