Fix extra 'a' after closing tag in recipe files

--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -33,4 +33,4 @@
         <li>Drain the fried chicken on paper towels. Depending on how much chicken you have, you may have to fry in a few shifts. Keep the finished chicken in a slightly warm oven while preparing the rest.</li>
     </ol>
 </body>
-</html>a
+</html>
