--- a/recipes/fried-pork.html
+++ b/recipes/fried-pork.html
@@ -29,7 +29,7 @@
         <li>Mix paprika, sugar, salt, pepper, garlic powder, onion powder, and cayenne pepper together in a wide, shallow bowl.</li>
         <li>Dredge pork chops in the spice mixture to coat and arrange on a baking sheet.</li>
         <li>Bake chops in preheated oven until no longer pink in the center, about 20 minutes. An instant-read thermometer inserted into the center should read 145 degrees F (63 degrees C).</li>
-        
+
     </ol>
 </body>
-</html>a
+</html>
